fix(card): fix unsupport css on IE

--- a/packages/elemental-theme/src/custom-elements/ef-card.less
+++ b/packages/elemental-theme/src/custom-elements/ef-card.less
@@ -49,7 +49,7 @@
   }
 
   [part~=footer] {
-    padding-top: calc(var(--card-padding) / 2);
+    padding-top: var(--card-padding);
   }
 
   [part~=footer-body] {
